--- a/index.html
+++ b/index.html
@@ -120,8 +120,7 @@ function showSlides() {
 }
 </script>
 <script>
-        const video = document.getElementById("bg-video");
-        video.playbackRate = 0.85;
+        const video = document.getElementById("bg1");
         // const top = document.getElementById("showcase");
         document.body.addEventListener("mouseenter", (e) => {
             video.play();
