--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         
       </header>
       
-      <video class="bg" id="bg1" muted  autoplay loop >
+      <video class="bg" id="bg1" autoplay loop >
       <source src="bg2.mp4" type="video/mp4"> 
       </video>
       <a href="#Products" class="scroll-down">
