--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </div>
 
   <div class="mySlides fade">
-    <div class="imgp2"><h1>Global sourcing Of leathers and trims</h1></div>
+    <div class="imgp2"><h1>Global sourcing Of leathers</h1></div>
   </div>
 
   <div class="mySlides fade">
