--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </header>
       
       <video class="bg" id="bg1" autoplay loop >
-      <source src="bg2.mp4" type="video/mp4"> 
+      <source src="bg.mp4" type="video/mp4"> 
       </video>
       <a href="#Products" class="scroll-down">
         <div class="mouse">
