--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="shortcut icon" href="logo.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="lg.png" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kabir Leathers</title>
     <link rel="stylesheet" href="home.css" />
@@ -25,7 +25,7 @@
       </header>
       
       <video class="bg" id="bg1" muted  autoplay loop >
-      <source src="bg.m4v" type="video/m4v"> 
+      <source src="bg.mp4" type="video/mp4"> 
       </video>
       <a href="#Products" class="scroll-down">
         <div class="mouse">
