--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="shortcut icon" href="logo.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="lg.png" type="image/x-icon" />
     <!-- Style -->
     <link rel="stylesheet" href="style.css">
 
