--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </div>
 
   <div class="mySlides fade">
-  <h3>Efficent Production</h1>
+  <h3>Efficient Production</h1>
     <div class="imgp3"></div>
   </div>
 
