--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
   <div class="gif">
     <div class="gif1"></div>  
   </div>
+  <div class="cp>
   <div class="con">
     <div class="products" id="Products">
       <h1>Celebrating 25 Years</h1>
@@ -91,6 +92,7 @@
       </div>
     </div>
     </div>
+  </div>
   </div>
   <div class="showcase1">
   <div class="mat">
