--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 </svg></a>
 <h2>Plot no.- 17 
 Sector-6 ,IMT Manesar, Gurugram-122050(Haryana)</h2>
-<h3>TEL.: +91-124-4001080(4 LINES)</h3>
+<h3>TEL.: +919810139830</h3>
     <h3>FAX: +91-124-4001139</h3>
     <h3>E-mail: vikram@kabirleathers.com</h3>
 </div>
