--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
   <button class="w3-button w3-black w3-display-right" id="l2" onclick="plusDivs(1)">&#10095;</button>
   </div>
   <div class="gif">
-    <div class="gif1"></div>  
+    <div class="gif1" <video  muted autoplay loop >
+      <source src="111.mp4" type="video/mp4"> 
+      </video></div>  
   </div>
   <div class="con">
     <div class="products" id="Products">
