--- a/index.html
+++ b/index.html
@@ -68,11 +68,10 @@
      </div>
   <button class="w3-button w3-black w3-display-right" id="l2" onclick="plusDivs(1)">&#10095;</button>
   </div>
-  <div class="gif">
-    <div class="gif1" <video  muted autoplay loop >
+    <div class="gif">
+    <div class="gif1"><video class="gif1"  muted autoplay loop >
       <source src="111.mp4" type="video/mp4"> 
       </video></div>  
-  </div>
   <div class="con">
     <div class="products" id="Products">
       <h1>Celebrating 25 Years</h1>
