--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <div class="gif1"><video class="gif1"  muted autoplay loop >
       <source src="111.mp4" type="video/mp4"> 
       </video></div>  
+  </div>
   <div class="con">
     <div class="products" id="Products">
       <h1>Celebrating 25 Years</h1>
