--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" />     
+    <meta name="description" content="Leather Exporters ">
+        <meta name="keywords" content="Kabir Leathers, kabir, leathers, KabirLeathers, bags, style, modern,export,exporters">
+        <meta name="author" content="Prashant Raj">
+        <meta name="copyright" content="Kabir Leathers">
+        <meta name="robots" content="index,follow">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="shortcut icon" href="lg.png" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
