--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />     
+    <meta name="google-site-verification" content="jI3X3uWzuWjgJEvqUI5_gbyu43Xi256NGqYZyrd1kXE" />
     <meta name="description" content="Leather Exporters ">
         <meta name="keywords" content="Kabir Leathers, kabir, leathers, KabirLeathers, bags, style, modern,export,exporters">
         <meta name="author" content="Prashant Raj">
