--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kabir Leathers</title>
     <link rel="stylesheet" href="home.css" />
+    <link  href="sitemap.xml" />
   </head>
   <body>
   <div class='spinner-wrapper'>
