--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8" />     
     <meta name="google-site-verification" content="jI3X3uWzuWjgJEvqUI5_gbyu43Xi256NGqYZyrd1kXE" />
     <meta name="description" content="Leather Exporters ">
-        <meta name="keywords" content="Kabir Leathers, kabir, leathers, KabirLeathers, bags, style, modern,export,exporters">
+        <meta name="keywords" content="Kabir Leathers,kabirleathers, kabir, leathers, KabirLeathers, bags, style, modern,export,exporters">
         <meta name="author" content="Prashant Raj">
         <meta name="copyright" content="Kabir Leathers">
         <meta name="robots" content="index,follow">
+    
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="shortcut icon" href="lg.png" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kabir Leathers</title>
     <link rel="stylesheet" href="home.css" />
-    <link  href="sitemap.xml" />
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="sitemap.xml">
   </head>
   <body>
   <div class='spinner-wrapper'>
