--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@ function showDivs(n) {
 </script>
 <script>
   
-        const video = document.getElementById("bg1");
+        const video1 = document.getElementById("bg1");
         // const top = document.getElementById("showcase");
         document.body.addEventListener("mouseenter", (e) => {
-            video.play();
+            video1.play();
         });
         document.body.addEventListener("mouseleave", (e) => {
         });
