--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="contact.html">Contact Us</a>
       </div>
         <div class="lg"></div>
-        <h1>KABIR LEATHERS</h1>
+        <h1>IKABIR LEATHERS</h1>
         
       </header>
       
