--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="home.css" />
     <link rel="sitemap" type="application/xml" title="Sitemap" href="sitemap.xml">
   </head>
-  <body onpageshow="playVideo()">
+  <body onpageshow="playVideo()" onclick='playVideo()'>
   <div class='spinner-wrapper'>
     <div class="spinner"></div>
 </div>
