--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
         <meta name="keywords" content="Kabir Leathers,kabirleathers, kabir, leathers, KabirLeathers, bags, style, modern,export,exporters">
         <meta name="author" content="Prashant Raj">
         <meta name="copyright" content="Kabir Leathers">
-
+        <meta name="robots" content="index,follow">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="shortcut icon" href="lg.png" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kabir Leathers</title>
     <link rel="stylesheet" href="home.css" />
-    <link rel="sitemap" type="application/xml" title="Sitemap" href="sitemap.xml">
+    <link rel="sitemap" type="application/xml" title="sitemap" href="sitemap.xml">
   </head>
   <body onpageshow="playVideo()" onclick='playVideo()'>
   <div class='spinner-wrapper'>
