--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kabir Leathers</title>
     <link rel="stylesheet" href="home.css" />
-    <link rel="sitemap" type="application/xml" title="sitemap" href="sitemap.xml">
+   <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
   </head>
   <body onpageshow="playVideo()" onclick='playVideo()'>
   <div class='spinner-wrapper'>
